GNOME Bugzilla – Bug 672533
Quartz image option causes compile error
Last modified: 2012-04-18 13:16:04 UTC
As before I configured with: ./configure --enable-quartz-image=yes --enable-gdk-pixbuf=no But on make I get an error: ....:$ make make all-recursive Making all in cogl GEN stamp-enum-types GEN cogl-enum-types.c make all-recursive CC cogl-gl.lo CC cogl-texture-driver-gl.lo CC cogl-winsys.lo CC dict.lo CC geom.lo CC mesh.lo CC normal.lo CC priorityq.lo CC render.lo CC sweep.lo CC tess.lo CC tessmono.lo CC cogl-context.lo CC cogl-renderer.lo CC cogl-swap-chain.lo CC cogl-onscreen-template.lo CC cogl-display.lo CC cogl.lo CC cogl-object.lo CC cogl-util.lo CC cogl-bitmap.lo CC cogl-bitmap-conversion.lo CC cogl-primitives.lo CC cogl-path.lo CC cogl2-path.lo CC cogl-bitmap-pixbuf.lo ./cogl-bitmap-pixbuf.c: In function '_cogl_bitmap_from_file': ./cogl-bitmap-pixbuf.c:151: error: 'CoglBitmapDestroyNotify' undeclared (first use in this function) ./cogl-bitmap-pixbuf.c:151: error: (Each undeclared identifier is reported only once ./cogl-bitmap-pixbuf.c:151: error: for each function it appears in.) ./cogl-bitmap-pixbuf.c:151: error: expected ')' before 'g_free' ./cogl-bitmap-pixbuf.c:152: warning: return makes pointer from integer without a cast make[4]: *** [cogl-bitmap-pixbuf.lo] Error 1 make[3]: *** [all-recursive] Error 1 make[2]: *** [all] Error 2 make[1]: *** [all-recursive] Error 1 make: *** [all] Error 2
Oh whoops, sorry about that. I don't have an easy way to compile the Quartz backend at the moment, but is there any chance you could try the following patch?
Created attachment 210234 [details] [review] bitmap-pixbuf: Fix the bitmap loader on Quartz The code for loading a CoglBitmap from a file was missed when upgrading to the new cogl_bitmap_new_for_data function in commit d18b59d9e6 so it wouldn't compile. This changes it to use _cogl_bitmap_new_with_malloc_buffer to allocate the buffer.
I've pushed the patch to master as 5b785dd441a83 and to the 1.10 branch as c6a29dd07e. From discussing this with you on IRC it sounds like there are still problems when using OS X but the patch as least fixes the compilation issue. Please open another bug if you are able to get more information for the remaining issues.